Fixed Style and Layout issues. Clicking on revealed cell with number x with >x neighboring cells flagged, reveals all non-flagged cells.

--- a/src/html5/minesweeper.css
+++ b/src/html5/minesweeper.css
@@ -9,10 +9,6 @@
 .cell{
   vertical-align: middle;
   position: absolute;
-  border: 3px;
-  border-style: outset;
-  border-color: #F7F7F7 #9E9E9E #7E7E7E #C6C6C6;
-  background-color: #D9D9D9;
 }
 
 .uninitialized{
@@ -20,11 +16,14 @@
 }
 
 .hidden{
-
+  border: 3px;
+  border-style: outset;
+  border-color: #F7F7F7 #9E9E9E #7E7E7E #C6C6C6;
+  background-color: #D9D9D9;
 }
 
 .flagged{
-
+  background-color: red;
 }
 
 .revealed{
@@ -32,10 +31,6 @@
   border-style: solid;
   border: 1px;
   border-color: red;
-}
-
-.empty{
-
 }
 
 .number{
